@@ -15,7 +15,7 @@ if [ -z "$SOURCE" ]; then
 fi
 
 # NOTE(yuval): Removed -Wno-writable-strings as it is the same as -Wno-write-strings
-opts="-Wno-write-strings -Wno-null-dereference -Wno-comment -Wno-switch -Wno-missing-declarations -Wno-logical-op-parentheses -g"
+opts="-Wno-write-strings -Wno-null-dereference -Wno-comment -Wno-switch -Wno-missing-declarations -Wno-logical-op-parentheses -g -DOS_MAC=1 -DOS_WINDOWS=0 -DOS_LINUX=0"
 arch=-m64
 
 preproc_file=4coder_command_metadata.i
