@@ -21,7 +21,7 @@ set custom_root=%cd%
 set custom_bin=%custom_root%\bin
 cd %location%
 
-if NOT "%Platform%" == "X86" IF NOT "%Platform%" == "x86" (call "%custom_bin%\setup_cl_x86.bat")
+if NOT "%Platform%" == "X64" IF NOT "%Platform%" == "x64" (call "%custom_bin%\setup_cl_x64.bat")
 
 set target=%1
 if "%target%" == "" set target=%custom_root%\4coder_default_bindings.cpp
@@ -34,6 +34,7 @@ if "%2" == "release" (set mode=%release%)
 set opts=/W4 /wd4310 /wd4100 /wd4201 /wd4505 /wd4996 /wd4127 /wd4510 /wd4512 /wd4610 /wd4457 /WX
 set opts=%opts% /GR- /nologo /FC
 set opts=%opts% -I%custom_root%
+set opts=%opts% /D OS_WINDOWS=1 /D OS_LINUX=0 /D OS_MAC=0
 set opts=%opts% %mode%
 
 set preproc_file=4coder_command_metadata.i
