@@ -24,23 +24,25 @@ load_paths = {
  { load_paths_only, .os = "mac"  },
 };
 
-build_super_x64_win32 = "custom\\bin\\buildsuper_x64.bat";
-build_super_x86_win32 = "custom\\bin\\buildsuper_x86.bat";
-build_super_x64_unix  = "custom/bin/buildsuper_x64.sh";
-build_super_x86_unix  = "custom/bin/buildsuper_x86.sh";
+build_super_x64_win32 = "custom\\bin\\buildsuper_x64-win.bat";
+build_super_x86_win32 = "custom\\bin\\buildsuper_x86-win.bat";
+build_super_x64_linux  = "custom/bin/buildsuper_x64-linux.sh";
+build_super_x86_linux  = "custom/bin/buildsuper_x86-linux.sh";
+build_super_x64_mac  = "custom/bin/buildsuper_x64-mac.sh";
+build_super_x86_mac  = "custom/bin/buildsuper_x86-mac.sh";
 
 command_list = {
  { .name = "build super x64",
    .out = "*compilation*", .footer_panel = true, .save_dirty_files = true,
    .cmd = { {build_super_x64_win32, .os ="win"  },
-            {build_super_x64_unix , .os ="linux"}, 
-            {build_super_x64_unix , .os ="mac"  }, }, },
+            {build_super_x64_linux , .os ="linux"}, 
+            {build_super_x64_mac , .os ="mac"  }, }, },
  
  { .name = "build super x86",
    .out = "*compilation*", .footer_panel = true, .save_dirty_files = true,
    .cmd = { {build_super_x86_win32, .os ="win" },
-            {build_super_x86_unix, .os ="linux" }, 
-            {build_super_x86_unix, .os ="mac" }, }, },
+            {build_super_x86_linux, .os ="linux" }, 
+            {build_super_x86_mac, .os ="mac" }, }, },
  
  { .name = "build C++ lexer generator",
    .out = "*compilation*", .footer_panel = true, .save_dirty_files = true,
